--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
