--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^7.6.1",
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss": "^4.1.7",
     "xlsx": "^0.18.5"
   },
